# luolj-TestAppForNewG2

hellocardboard-android/: build.gradle
sdk/: CMakeLists.txt  build.gradle  cardboard.cc  qr_code.h
sdk/include/: cardboard.h
sdk/qrcode/android/: qr_code.cc
sdk/qrcode/android/java/com/google/cardboard/: QrCodeCaptureActivity.java
sdk/qrcode/android/java/com/google/cardboard/common/: BaseActivity.java  BaseFragment.java  BaseService.java
sdk/qrcode/android/java/com/google/cardboard/dialog/: MessageDialogFragment.java  MessageDialogFragmentV4.java
sdk/qrcode/android/java/com/google/cardboard/qrcode/: CardboardParamsUtils.java
sdk/qrcode/android/java/com/google/cardboard/usb/: CameraDialog.java  DeviceFilter.java  IButtonCallback.java  IFrameCallback.java  IStatusCallback.java  Size.java  USBMonitor.java  USBVendorId.java  UVCCamera.java
sdk/qrcode/android/java/com/google/cardboard/utils/: BuildCheck.java  HandlerThreadHandler.java  PermissionCheck.java
sdk/qrcode/android/jni/: qrcode_jni.cc
sdk/qrcode/android/res/layout/: qr_code_capture.xml
sdk/qrcode/android/res/values/: strings.xml
sdk/sensors/hid_sensor/: device_accelerometer_sensor.cc  device_gyroscope_sensor.cc  hid_sensor.cc  hid_sensor.h  sensor_event_producer.cc
